# mai-docker-compose

./: .gitignore  README.md  docker-compose.yml
data/: abnormal.csv  normal2024a.csv
data/dns_aggregated/: abnormal.orc  normal2024a.orc
kibana/: export-dashboards.sh  import-dashboards.sh
kibana/dashboards/: kibana-exports.ndjson
src/mai_streaming/: Dockerfile  __init__.py  pyproject.toml  requirements.txt
