[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mai_streaming"
version = "0.1.0"
authors = [
    { name = "MAI Team" },
]
description = "MAI Streaming Package"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0.0",
    "pandas>=1.3.0",
    "elasticsearch>=8.0.0",
    "numpy>=1.20.0",
    "pyarrow>=6.0.0",
]

[project.scripts]
mai-streaming = "mai_streaming.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["mai_streaming*"]
namespaces = false 